[package]
name = "ircayc"
version = "0.1.0"
authors = ["asocha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proxy = ["tokio-socks"]
tls-native = ["native-tls", "tokio-tls"]

[dependencies]
irc = "0.14"
futures = "0.3.0"
tokio = { version = "0.2.0", features = ["macros", "net", "stream", "time"] }
tokio-util = { version = "0.3.0", features = ["codec"] }

tokio-socks = { version = "0.3.0", optional = true }

# Feature - TLS
native-tls = { version = "0.2.0", optional = true }
tokio-rustls = { version = "0.14.0", optional = true }
tokio-tls = { version = "0.3.0", optional = true }
webpki-roots = { version = "0.20.0", optional = true }