[package]
name = "ircayc"
version = "0.1.0"
authors = ["asocha"]
edition = "2018"

[features]
proxy = ["tokio-socks"]
tls-native = ["native-tls", "tokio-tls"]

[dependencies]
irc = "0.14"
futures = "0.3.0"
failure = "0.1.8"
log = "0.4"
fern = "0.5"
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["codec"] }
tokio-socks = { version = "0.3.0", optional = true }

base64 = "0.1.0"

# Feature - TLS
native-tls = { version = "0.2.0", optional = true }
tokio-rustls = { version = "0.14.0", optional = true }
tokio-tls = { version = "0.3.0", optional = true }
webpki-roots = { version = "0.20.0", optional = true }
